--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         items.forEach((element, index) => {
             str += `
                     <tr>
-                        <th scope="row">${index}</th>
+                        <th scope="row">${index + 1}</th>
                         <td>${element[0]}</td>
                         <td>${element[1]}</td>
                         <td><button class="btn btn-primary">Delete</button></td>
